--- a/app/src/main/res/layout/activity_pick_routine.xml
+++ b/app/src/main/res/layout/activity_pick_routine.xml
@@ -48,7 +48,8 @@
         android:textColorHint="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tabs" />
+        app:layout_constraintTop_toBottomOf="@+id/tabs"
+        android:importantForAutofill="no" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
