--- a/app/src/main/res/layout/item_routine_user.xml
+++ b/app/src/main/res/layout/item_routine_user.xml
@@ -3,11 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:elevation="0dp"
+        app:cardElevation="0dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,11 +33,13 @@
             <TextView
                 android:id="@+id/tv_routine_name"
                 style="@style/textStyleSemiBold"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
+                android:layout_marginEnd="12dp"
                 android:text="@string/routine_name"
                 android:textSize="16sp"
+                app:layout_constraintEnd_toStartOf="@+id/schedule_status"
                 app:layout_constraintStart_toEndOf="@+id/iv_routine"
                 app:layout_constraintTop_toTopOf="@+id/iv_routine" />
 
@@ -43,17 +48,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
+                android:layout_marginTop="4dp"
                 android:text="@string/routine_time"
                 android:textColor="@color/grey"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/iv_routine" />
+                app:layout_constraintStart_toEndOf="@+id/iv_routine"
+                app:layout_constraintTop_toBottomOf="@+id/tv_routine_name" />
 
             <com.capstone.moru.ui.customview.CustomStatus
+                android:id="@+id/schedule_status"
                 style="@style/textStyleMedium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="24dp"
+                android:elevation="0dp"
+                android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
