--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -59,6 +59,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+
         android:id="@+id/logout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -102,7 +103,7 @@
         android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/change_pass">
+        app:layout_constraintTop_toBottomOf="@+id/profile_data">
 
         <TextView
             android:id="@+id/tv_subscription"
@@ -120,66 +121,68 @@
             android:id="@+id/iv_subscription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/subscription"
             android:src="@drawable/ic_attach_money_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/subscription" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/iv_to_subscription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/subscription"
             android:src="@drawable/ic_arrow_forward_ios_24"
             app:layout_constraintBottom_toBottomOf="@+id/tv_subscription"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_subscription"
-            android:contentDescription="@string/subscription" />
+            app:layout_constraintTop_toTopOf="@+id/tv_subscription" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/change_pass"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_data">
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:id="@+id/change_pass"-->
+<!--        android:visibility="invisible"-->
+<!--        -->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="24dp"-->
+<!--        android:layout_marginTop="24dp"-->
+<!--        android:layout_marginEnd="24dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/profile_data">-->
 
-        <TextView
-            android:id="@+id/tv_change_pass"
-            style="@style/textStyleMedium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:text="@string/change_password"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_change_pass"
-            app:layout_constraintStart_toEndOf="@+id/iv_change_pass"
-            app:layout_constraintTop_toTopOf="@+id/iv_change_pass" />
+<!--        <TextView-->
+<!--            android:id="@+id/tv_change_pass"-->
+<!--            style="@style/textStyleMedium"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="12dp"-->
+<!--            android:text="@string/change_password"-->
+<!--            android:textSize="16sp"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/iv_change_pass"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/iv_change_pass"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/iv_change_pass" />-->
 
-        <ImageView
-            android:id="@+id/iv_change_pass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_pass_24"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/change_password" />
+<!--        <ImageView-->
+<!--            android:id="@+id/iv_change_pass"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:src="@drawable/ic_pass_24"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            android:contentDescription="@string/change_password" />-->
 
-        <ImageView
-            android:id="@+id/iv_to_change_pass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_arrow_forward_ios_24"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_change_pass"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/tv_change_pass"
-            android:contentDescription="@string/change_password" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--        <ImageView-->
+<!--            android:id="@+id/iv_to_change_pass"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:src="@drawable/ic_arrow_forward_ios_24"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/tv_change_pass"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/tv_change_pass"-->
+<!--            android:contentDescription="@string/change_password" />-->
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/profile_data"
